label color, fix list-item text alignment

--- a/src/media/richtaur.css
+++ b/src/media/richtaur.css
@@ -55,7 +55,7 @@ a:hover {
 }
 
 #header ul {
-	background: rgb(133, 149, 161);
+	background: rgb(133, 149, 161); /* silver */
 	display: block;
 	text-align: center;
 }
@@ -107,6 +107,10 @@ a:hover {
 
 .list-item h2, .list-item-thumbnail h2 {
 	margin-bottom: 0.5em;
+}
+
+.list-item div {
+	text-align: left;
 }
 
 .list-item-thumbnail {
